# Task-Execution-Agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: mock_bookings.json  mock_calendar.json  mock_search_index.json
docs/: architecture.md  demo-transcript.md  failure-handling.md  requirement-mapping.md
src/task_agent/: __init__.py  config.py
src/task_agent/agent/: __init__.py  executor.py  planner.py  planner_support.py  prompts.py  state.py
src/task_agent/domain/: errors.py  models.py  schemas.py
src/task_agent/evaluation/: __init__.py  runner.py  scenarios.py
src/task_agent/tools/: booking_service.py  calendar_check.py  helpers.py  registry.py  reminder_create.py  search_service.py
src/task_agent/ui/: __init__.py  cli.py
tests/: test_agent_clarification.py  test_agent_execution.py  test_cli.py  test_constraint_updates.py  test_domain_models.py  test_evaluation_runner.py  test_failure_handling.py  test_smoke.py  test_submission_contract.py  test_tools.py
